add form validation on client side

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,20 @@
 <%- include('./includes/head')  %>
 
-
 <div class="row">
+
+  <form action="/addTask" method="post" onsubmit="formValidation(event)">
   
-  <form action="/addTask" method="post">
 
     <label for="task" class="form-label">Write your task : </label>
     <div class="input-group mb-3">
-
       <input type="text" name="task" class="form-control">
     </div>
-
     <button type="submit" class="btn btn-primary">Send it!</button>
-
   </form>
+  <p id="msg"></p>
+
 </div>
 
 
-
-
-
 <%- include('./includes/footer')  %>
+<script src="/js/main.js"></script>
