--- a/views/addTask.ejs
+++ b/views/addTask.ejs
@@ -1,20 +1,16 @@
 <%- include('./includes/head')  %>
+<%- include('./includes/nav')  %>
 
 <div class="row">
-
   <form action="/addTask" method="post" onsubmit="formValidation(event)">
-  
-
-    <label for="task" class="form-label">Write your task : </label>
+    <label for="title" class="form-label">Write your task : </label>
     <div class="input-group mb-3">
-      <input type="text" name="task" class="form-control">
+      <input type="text" name="title" class="form-control">
     </div>
     <button type="submit" class="btn btn-primary">Send it!</button>
   </form>
   <p id="msg"></p>
-
 </div>
-
 
 <%- include('./includes/footer')  %>
 <script src="/js/main.js"></script>
