--- a/views/allTasks.ejs
+++ b/views/allTasks.ejs
@@ -9,7 +9,8 @@
   <ul class="list-group">
     <% tasks.map((item)=>{ %>
     <li class="list-group-item"><%= item.title %>
-      <div class="mt-3">
+      <div class="mt-3">        
+        <a class="btn btn-primary" href="/editTask/<%= item._id %>">Edit</a>
         <a class="btn btn-primary" href="/cancelTask/<%= item._id %>">Cancel</a>
       </div>
     </li>
