--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -1,13 +1,11 @@
 <div class="row">
   <ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link <%= path === '/' ? 'highlight' : ''  %>" href=" /">home</a>
-  </li>
+    <li class="nav-item">
+      <a class="nav-link <%= path === '/' ? 'highlight' : ''  %>" href=" /tasksList">tasksList</a>
+    </li>
+
     <li class="nav-item ">
       <a class="nav-link <%= path === '/addTask' ? 'highlight' : ''  %>" href="/addTask">addTask</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link <%= path === '/tasksList' ? 'highlight' : ''  %>" href=" /tasksList">tasksList</a>
     </li>
 
   </ul>
