--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -1,7 +1,7 @@
 <div class="row">
   <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link <%= path === '/' ? 'highlight' : ''  %>" href=" /tasksList">tasksList</a>
+      <a class="nav-link <%= path === '/' ? 'highlight' : ''  %>" href=" /">tasksList</a>
     </li>
 
     <li class="nav-item ">
