--- a/views/addTask.ejs
+++ b/views/addTask.ejs
@@ -7,6 +7,10 @@
     <div class="input-group mb-3">
       <input type="text" name="title" class="form-control">
     </div>
+    <label for="role" class="form-label">who is responsible ? </label>
+    <div class="input-group mb-3">
+      <input type="text" name="role" class="form-control">
+    </div>
     <button type="submit" class="btn btn-primary">Send it!</button>
   </form>
   <p id="msg"></p>
