--- a/views/allTasks.ejs
+++ b/views/allTasks.ejs
@@ -8,12 +8,9 @@
   <% }else{ %>
   <ul class="list-group">
     <% tasks.map((item)=>{ %>
-    <li class="list-group-item"><%= item.title %>
-      <div class="mt-3">        
-        <a class="btn btn-primary" href="/editTask/<%= item._id %>">Edit</a>
-        <a class="btn btn-primary" href="/cancelTask/<%= item._id %>">Cancel</a>
-      </div>
-    </li>
+    <a class="nav-link" href="/taskDetails/<%= item._id %>">
+      <li class="list-group-item"><%= item.title %></li>
+    </a>
     <%  }) %>
   </ul>
 
