--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -1,12 +1,14 @@
 <div class="row">
   <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link <%= path === '/' ? 'highlight' : ''  %>" href=" /">tasksList</a>
+      <a class="nav-link <%= path === '/' ? 'highlight' : '' %>" href=" /">tasksList</a>
     </li>
 
-    <li class="nav-item ">
-      <a class="nav-link <%= path === '/addTask' ? 'highlight' : ''  %>" href="/addTask">addTask</a>
-    </li>
+    <li class="nav-item">
+      <a class="nav-link <%= path === '/addTask' ? 'highlight' : '' %>" href="/addTask">
+        <%= editing ? 'editTask' : 'addTask' %>
 
+      </a>
+    </li>
   </ul>
 </div>
